Add two examples of sorting algorithms and ability to select which one to use

--- a/django_sorting/sorting_app/templates/index.html
+++ b/django_sorting/sorting_app/templates/index.html
@@ -12,6 +12,7 @@
     {{form}}
     {% csrf_token %}
     <button type="submit">Sort</button>
+    <p>Sorted Data: {{sorted_data}}</p>
 </form>
 </body>
 </html>
