--- a/django_sorting/sorting_app/templates/history.html
+++ b/django_sorting/sorting_app/templates/history.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<a href="/">Back to Main Page</a>
+<a href="{% url 'index' %}">Back to Main Page</a>
 <br>
 <ul>
     {% for run in past_runs %}
