--- a/django_sorting/sorting_app/templates/index.html
+++ b/django_sorting/sorting_app/templates/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>This app sorts things</h1>
-<p>There have been <a href="/history"> {{num_sorting_runs}} previous sorting runs</a></p>
+<p>There have been <a href="{% url 'history' %}"> {{num_sorting_runs}} previous sorting runs</a></p>
 <form method="post">
     {{form}}
     {% csrf_token %}
